Returning export id, and adding swagger docs.
