# docs/openapi.yaml
@@ -2146,6 +2146,7 @@ paths:
                 $ref: '#/components/schemas/Setting'
   /api/{exportType}:
     get:
+      deprecated: true
       tags: [ Export ]
       operationId: export
       description: >
@@ -2208,6 +2209,89 @@ paths:
       responses:
         200:
           description: export response
+  /api/export/{exportType}:
+    get:
+      tags: [ Export ]
+      operationId: exportBackground
+      description: >
+        Export mage data (GeoJSON, KML, Shapefiles, CSV) in the background. The requesting user must have
+        `READ_OBSERVATION_ALL` permission or `READ_OBSERVATION_EVENT` and an ACL entry in the
+        event with `read`.
+      summary: Export in the background.
+      parameters:
+      - name: exportType
+        in: path
+        required: true
+        schema:
+          type: string
+          enum:
+          - geojson
+          - kml
+          - shapefile
+          - csv
+      - name: eventId
+        in: query
+        required: true
+        schema:
+          type: number
+      - name: startDate
+        in: query
+        schema:
+          type: string
+          format: date-time
+      - name: endDate
+        in: query
+        schema:
+          type: string
+          format: date-time
+      - name: observations
+        in: query
+        description: Boolean flag indicating whether or not to export observations
+        schema:
+          type: boolean
+          default: true
+      - name: locations
+        in: query
+        description: Boolean flag indicating whether or not to export user locations
+        schema:
+          type: boolean
+          default: true
+      - name: attachments
+        in: query
+        description: Boolean flag indicating whether or not to `exclude` observation attachments (if any).  Attachments are included by default.
+        schema:
+          type: boolean
+      - name: favorites
+        in: query
+        description: Boolean flag indicating whether or not to export only favorite observations 
+        schema:
+          type: boolean
+      - name: important
+        in: query
+        description: Boolean flag indicating whether or not to export only observations flagged important
+        schema:
+          type: boolean
+      responses:
+        201:
+          description: export location
+  /api/export/{exportId}/status:
+    get:
+      tags: [ Export ]
+      operationId: exportBackgroundStatus
+      description: >
+        Get the status of a background export operation. The requesting user must have
+        `READ_OBSERVATION_ALL` permission or `READ_OBSERVATION_EVENT` and an ACL entry in the
+        event with `read`.
+      summary: Get the status of a background export operation.
+      parameters:
+      - name: exportId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: export location
 components:
   securitySchemes:
     authenticationToken:
